Auth change + Refresh token impl