@@ -1,17 +1,34 @@
 package org.example.library.security;
 
+import org.example.library.user.domain.Role;
 import org.example.library.user.domain.User;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
-public record UserDetailsImpl(User user) implements UserDetails {
+public record UserDetailsImpl(User user) implements UserDetails, UserPrincipal {
 
+    @Override
     public Integer getId() {
         return user.getId();
+    }
+
+    @Override
+    public String getEmail() {
+        return user.getEmail();
+    }
+
+    @Override
+    public String getFullName() {
+        return user.getFullName();
+    }
+
+    @Override
+    public Role getRole() {
+        return user.getRole();
     }
 
     @Override
@@ -27,29 +44,9 @@ public record UserDetailsImpl(User user) implements UserDetails {
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         if (user.getRole() == null)
-            return List.of();
+            return Collections.emptyList();
 
-        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
-    }
-
-    @Override
-    public boolean isAccountNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isAccountNonLocked() {
-        return true;
-    }
-
-    @Override
-    public boolean isCredentialsNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isEnabled() {
-        return true;
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
     }
 
 }
